projects/compiler/test/typechecker/bindingdecl/error_invalid_destructuring_tuple_too_many.2.out
Error at %FILE_NAME%:2:12
Incorrect number of destructuring arguments for tuple
  |  val (a, b, c) = x
                ^
Expected 2, but 3 were provided
